# routex

./: go.mod  macsshzoomer  macsshzoomer.pub
client/: Cargo.toml
client/src/: config.rs  games.rs  latency.rs  main.rs
client/src/routing/: mod.rs
client/src/tunnel/: mod.rs
client/src/ui/: mod.rs
server/cmd/api/: main.go
server/cmd/auth/: main.go
server/cmd/relay/: main.go
server/internal/api/: api.go
server/internal/auth/: auth.go
server/internal/relay/: relay.go
