[package]
name = "routex-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
wintun = "0.4"
tokio = { version = "1", features = ["full"] }
boringtun = "0.6"        # WireGuard реализация на Rust
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.102"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
]}
